# LOC_Counter

./: CMakeLists.txt
src/: main.cpp
src/testy/: text.txt
